# openstint

./: .gitignore  CHANGES_SUMMARY.md  CMakeLists.txt  CONTRIBUTORS.md  NotesfromForum.md  QUICKSTART.md  README.md  README_rc4.md  RTL-SDR_IMPLEMENTATION.md  error1.md  openstint-desktop.spec  pyexample.py
.github/workflows/: deploy-website.yml  ubuntu-build.yml  windows-build.yml
desktop/: app.py  build.py  rtlsdr_wrapper.py
docs/: .gitignore  awesome-openstint.md  conv-bruteforce.c  decoder-protocol.md  dev-rx-architecture.md  fec-conv.c  fec-crc.c  introduction.md  passing-detection.md  preamble.ipynb  prior-arts.md  purchase-transponder.md  rc4.md  replay-capture.md  scoring-lapbeeps.md  scoring-rcgtiming.md  scoring-zround.md  setup-simple-rtlsdr.md  setup-tutorial-raspberry.md  setup-tutorial-windows.md  setup-tutorial.md  supported-hardware.md  timing-accuracy.md  transponder-protocol.md  tune_capture.py
integrations/: bridge-http.py  bridge-p3.py  bridge-rcgtiming.py  bridge-ws.py  bridge-zround.py  change_id.py  laptimer.py  simulator.py  subscriber.py  timesync_anomaly.py  timesync_pairstats.py
src/: CMakeLists.txt  Makefile  README_rc4.md  capture.cpp  capture.hpp  commons.cpp  commons.hpp  complex_cast.hpp  counters.cpp  counters.hpp  crash_handler.cpp  crash_handler.hpp  engine.cpp  frame.cpp  frame.hpp  framesync.cpp  framesync.hpp  main.cpp  main_hackrf.cpp  main_rtlsdr.cpp  passing.cpp  passing.hpp  preamble.hpp  rc4.cpp  rc4.hpp  rc4_registry.cpp  rc4_registry.hpp  sdr_device.cpp  sdr_device.hpp  sdr_hackrf.cpp  sdr_hackrf.hpp  sdr_rtlsdr.cpp  sdr_rtlsdr.hpp  summing_buffer.hpp  timebase.cpp  timebase.hpp  transponder.cpp  transponder.hpp  zmq_reporter.cpp
src/python/: bindings.cpp
systemd/: bridge-p3.service  bridge-zround.service  openstint.service
tools/: start.bat
website/: index.md  package-lock.json
website/.vitepress/: config.mts
website/.vitepress/theme/: custom.css
